# job_portal_graphql

./: .env.example  .gitignore  LICENSE  POETRY_MIGRATION.md  README.md  README_GRAPHQL_BENEFITS.md  README_GRAPHQL_MIGRATION.md  app.py  config.py  extensions.py  forms.py  logging_config.py  models.py  pyproject.toml  requirements.txt  run.py  test_graphql.py  test_poetry_setup.py  utils.py
blueprints/admin/: routes.py
blueprints/auth/: __init__.py  routes.py
blueprints/employer/: __init__.py  routes.py
blueprints/graphql/: __init__.py  routes.py
blueprints/job_seeker/: __init__.py  routes.py
blueprints/jobs/: __init__.py  routes.py
blueprints/main/: routes.py
blueprints/utils/: __init__.py  routes.py
graphql_api/: README.md  schema.py
graphql_api/resolvers/: __init__.py  application_resolvers.py  job_resolvers.py  user_resolvers.py
migrations/versions/: 3d33b12dc264_initial_migration.py  492888bc5a11_add_profile_picture_to_user_model.py  8758ee3d4118_add_indexes_to_user_job_application_.py  90ad5652fc59_add_unique_constraint_to_job_model.py  9e02d293eff0_remove_unique_constraint_from_username.py  cdb0771053c6_add_company_logo_to_job_model.py  f5a9a0000716_add_location_to_job_uniqueness_.py  update_existing_jobs_logo.py
static/css/: style.css
static/js/: flash-messages.js  main.js  search.js
templates/: about.html  apply_job.html  base.html  contact.html  index.html  job_applications.html  job_detail.html  jobs.html  login.html  my_applications.html  my_jobs.html  new_job.html  privacy.html  profile.html  register.html  terms.html
templates/admin/: applications.html  create_job.html  dashboard.html  edit_job.html  edit_user.html  jobs.html  new_user.html  users.html
tests/: test_admin.py  test_app.py  test_auth.py  test_employer.py  test_errors.py  test_file_upload.py  test_job_seeker.py  test_jobs.py  test_mail.py  test_main.py  test_models.py  test_run.py  test_utils.py
